TEST_PROGRAMS/INVALID/badshortvardecl.go
package main


func main() {
<<<<<<< HEAD
        x =1;
=======

    x = 1;
>>>>>>> e1fd8dea54e9cf8c2762c19563bf91bd734e080b

        for ;;{
                    println(x)
                            x++;
                                    break;
                                        }
}
